# Competitive-Programming-and-Contests-VP-Solution

./: .gitignore  LICENSE  README.md  _config.yml
.github/: FUNDING.yml
01knapsack/: CMakeLists.txt  README.md
AlternativeThinking/: CMakeLists.txt  README.md
CircularRMQ/: CMakeLists.txt  README.md
EditDistance/: CMakeLists.txt  README.md
FindingTeamMember/: CMakeLists.txt  README.md
FrogsAndMosquitoes/: CMakeLists.txt  README.md
IlyaAndQueries/: CMakeLists.txt  README.md
InversionCounting/: CMakeLists.txt  README.md
InversionCounting/src/: Main.cpp  MainSite.cpp
InversionCounting/src/core/: FenwickTree.cpp  FenwickTree.h  InversionCounting.cpp  InversionCounting.h  InvertionCounting.cpp  InvertionCounting.h  Order.cpp  Order.h
InversionCounting/src/test/: Main.cpp
InversionCounting/src/test/data/: input08.txt
KadanesAlgorithm/: CMakeLists.txt  README.md
LeadersInArray/: CMakeLists.txt  README.md
LittleGirlandMaximumSum/: CMakeLists.txt  README.md
LongestBitonicSubsequence /: CMakeLists.txt  README.md
LongestCommonSubsequence/: CMakeLists.txt  README.md
LongestIncreasingSubsequence/: README.md  TODO.md
SlidingWindowMaximum/benchmark/: CMakeLists.txt  Main.cpp  bm_result.ipynb  bt_result.json  result.csv  result.json
SlidingWindowMaximum/benchmark/docs/: README.md  bm_result.md
Triplets/: CMakeLists.txt  README.md
Triplets/benchmark/: Main.cpp
Triplets/src/core/: CountTriplets.hpp  FenwickTree.hpp  LazySegmentTree.hpp
Triplets/src/test/: Main.cpp  TestTool.hpp  Utils.hpp
Triplets/src/test/resources/: input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  output3.txt  output4.txt  output5.txt
(+440 files in other folders)
